<resources>
    <string name="app_name">M4 - Ejercicios</string>

    <!-- Ejercicio 1 -->
    <string name="lifecycle">Ciclo de Vida de una App</string>

    <string name="implicitIntent">Intent \nImplícito</string>

    <string name="btnActivity2">Cargar activity 2</string>
    <string name="btnActivity1">Regresar a activity 1</string>

    <!-- Ejercicio 2 -->
    <string name="frame">Frame Layout Activity</string>

    <string name="linearComponent1">Componente 1</string>
    <string name="linearComponent2">Componente 2</string>
    <string name="linearComponent3">Componente 3</string>
    <string name="linearComponent4">Componente 4</string>
    <string name="linearComponent5">Componente 5</string>
    <string name="linearComponent6">Componente 6</string>

    <string name="relativeData">Ingresa tus datos</string>
    <string name="relativeHintEmail">Correo</string>
    <string name="relativeSendButton">Entrar</string>

    <string name="constraintHintEmail">Email</string>
    <string name="constraintHintPassword">Password</string>
    <string name="constraintRegisterMessage">Ya estás registrado!</string>

    <string name="form">Formulario</string>
    <string name="nameform">Nombre: </string>
    <string name="lastnameform">Apellido: </string>
    <string name="languagesform">Lenguajes de programación y frameworks</string>
    <string name="kotlin">Kotlin</string>
    <string name="js">JavaScript</string>
    <string name="swift">Swift</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="web">Web</string>
    <string name="desktop">Desktop</string>
    <string name="imgButton">Toca la siguiente imagen</string>
    <string name="sendButton">Enviar datos</string>

    <!-- Tarea -->
    <string name="title">App de Registro</string>
    <string name="instructions">Llena los campos con la información necesaria</string>
    <string name="genre">Sexo:</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>
    <string name="noGenre">No se ha seleccionado un género</string>
    <string name="email">Email:</string>
    <string name="password">Contraseña:</string>
    <string name="blank">Campo vacio</string>

    <string name="result">Los datos ingresados son: </string>
    <string name="greetings">Hola %s!</string>
    <string name="fullname">Nombre Completo: %1s %2s</string>
    <string name="dataGenre">Género: %s</string>
    <string name="dataEmail">Email: %s</string>
    <string name="dataPassword">Password: %s</string>

    <!-- Práctica final -->
    <string name="register">¿Registrarse?</string>
    <string name="registerTitle">Registrate!</string>
    <string name="welcome">Bienvenido!</string>
    <string name="usrEmail">Usuario Registrado con el email:\n %s</string>
    <string name="usrPass">Contraseña: %s</string>
    <string name="usrData">Datos personales:</string>
    <string name="usrName">Nombre: %s</string>
    <string name="usrLastName">Apellido: %s</string>
    <string name="usrGenre">Género: %s</string>

</resources>